change input path

--- a/flesp_friends-isc/Makefile
+++ b/flesp_friends-isc/Makefile
@@ -27,7 +27,7 @@ requirements: test_environment
 
 ## Make Dataset
 data:
-	$(PYTHON_INTERPRETER) src/data/make_dataset.py ../data/cneuromod_new/friends/derivatives/fmriprep20.2lts/fmriprep/ ../data/processed
+	$(PYTHON_INTERPRETER) src/data/make_dataset.py /lustre03/project/rrg-pbellec/flesp/flesp_friends-isc/data/cneuromod_new/friends/derivatives/fmriprep-20.2lts/fmriprep /lustre03/project/rrg-pbellec/flesp/flesp_friends-isc/data/processed
 ## Delete all compiled Python files
 clean:
 	find . -type f -name "*.py[co]" -delete
