added optional argument

--- a/flesp_friends-isc/Makefile
+++ b/flesp_friends-isc/Makefile
@@ -33,7 +33,7 @@ features:
 	$(PYTHON_INTERPRETER) src/features/build_features.py /scratch/flesp/data/processed /scratch/flesp/data/iscs
 ## Make figures
 figures:
-	$(PYTHON_INTERPRETER) src/visualization/visualize.py /scratch/flesp/data/iscs
+	$(PYTHON_INTERPRETER) src/visualization/visualize.py /scratch/flesp/data/iscs $(USER_OPTIONS)
 ## Delete all compiled Python files
 clean:
 	find . -type f -name "*.py[co]" -delete
