update user options make model

--- a/flesp_friends-isc/Makefile
+++ b/flesp_friends-isc/Makefile
@@ -36,7 +36,7 @@ figures:
 	$(PYTHON_INTERPRETER) src/visualization/visualize.py /scratch/flesp/data/iscs $(USER_OPTIONS)
 ## Make second_level model
 model:
-		$(PYTHON_INTERPRETER) src/models/brain_hr_isc_secondlevel.py /scratch/flesp/data/isc-segments30 /scratch/flesp/data/second_level_models
+		$(PYTHON_INTERPRETER) src/models/brain_hr_isc_secondlevel.py /scratch/flesp/data/isc-segments /scratch/flesp/data/second_level_models $(USER_OPTIONS)
 ## Delete all compiled Python files
 clean:
 	find . -type f -name "*.py[co]" -delete
